[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Barzabel <Kochenko1995@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytelegrambotapi = "^4.19.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
bson = "^0.5.10"
pybson = "^0.5.9"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
